fine-tuning concordance excercise

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -29,7 +29,7 @@
                         <p>
                             Avant de venir étudier au Québec, je
                             (<b title="je ne connaissais pas">ne connaître pas</b>)
-                            <input type="text" pattern="je ne connaissais pas">
+                            <input type="text" class="extra-wide" pattern="je ne connaissais pas">
                             l’hiver.
 
                             (<b title="J'étais">Je être</b>)
@@ -200,7 +200,7 @@
                         <h4>Le courrier du cœur</h4>
 
                         <p>
-                            Bonjour,
+                            Bonjour,<br />
                             Je vous écris parce que je ne sais plus quoi faire et j’ai besoin de vos conseils.
 
                             Il y a deux semaines, (<b title="je suis allé">je aller</b>)
@@ -245,7 +245,7 @@
                             sans dire un mot.
 
                             Hier, (<b title="je suis retourné">je retourner</b>)
-                            <input type="text" pattern="je suis retourné">
+                            <input type="text" class="wide" pattern="je suis retourné">
                             à ce même cinéma.
 
                             (<b title="J'espérais">Je espérer</b>)
@@ -288,7 +288,7 @@
                             dans ma direction.
 
                             Nous (<b title="nous sommes regardés">se regarder</b>)
-                            <input type="text" class="wide" pattern="nous sommes regardés">
+                            <input type="text" class="extra-wide" pattern="nous sommes regardés">
                             , mais, encore cette fois, (<b title="j'ai été / j'étais">je être</b>)
                             <input type="text" pattern="j'ai été|j'étais">
                             trop timide et je (<b title="n'ai pas osé">ne pas oser</b>)
@@ -330,11 +330,11 @@
                             D’abord, (<b title="j'ai chaussé">je chausser</b>)
                             <input type="text" pattern="j'ai chaussé">
                             les skis et (<b title="je suis montée">je monter</b>)
-                            <input type="text" pattern="je suis montée">
+                            <input type="text" class="wide" pattern="je suis montée">
                             dans le monte-pente.
 
                             Comme je (<b title="ne pas pratiquais">ne pas pratiquer</b>)
-                            <input type="text" pattern="ne pas pratiquais">
+                            <input type="text" class="wide" pattern="ne pas pratiquais">
                             cette activité très souvent, (<b title="j'avais / j'ai eu">je avoir</b>)
                             <input type="text" pattern="j'avais|j'ai eu">
                             un peu peur.
