fixed regexp for OR

--- a/french/pages/exercise_future.html
+++ b/french/pages/exercise_future.html
@@ -283,7 +283,7 @@
 
                     <li>
                         (<b title="J'enverrai">Je envoyer</b>)
-                        <input type="text" pattern="J|j'enverrai">
+                        <input type="text" pattern="[Jj]'enverrai">
                         la facture, il la (<b title="paiera">payer</b>)
                         <input type="text" pattern="paiera">
                         aussitôt qu’il la (<b title="recevra">recevoir</b>)
