--- a/french/pages/exercise_presentperfect.html
+++ b/french/pages/exercise_presentperfect.html
@@ -25,7 +25,7 @@
                 <ol>
                     <li>
                         (<b title="J'ai eu">Je avoir</b>)
-                        <input type="text" pattern="J|j'ai eu">
+                        <input type="text" pattern="[Jj]'ai eu">
                         soif et (<b title="j'ai pris">je prendre</b>)
                         <input type="text" pattern="j'ai pris">
                         un café.
@@ -135,7 +135,7 @@
 
                     <li>
                         (<b title="J'ai ouvert">Je ouvrir</b>)
-                        <input type="text" pattern="J|j'ai ouvert">
+                        <input type="text" pattern="[Jj]'ai ouvert">
                         la porte et le chien (<b title="a couru">courir</b>)
                         <input type="text" pattern="a couru">
                         à l’extérieur.
@@ -219,7 +219,7 @@
 
                     <li>
                         (<b title="J'ai perdu">Je perdre</b>)
-                        <input type="text" pattern="J|j'ai perdu">
+                        <input type="text" pattern="[Jj]'ai perdu">
                         mon temps : je (<b title="n'ai rien fait">ne faire rien</b>)
                         <input type="text" pattern="n'ai rien fait">
                         .
@@ -261,7 +261,7 @@
                         Tu (<b title="as entendu">entendre</b>)
                         <input type="text" pattern="as entendu">
                         ce bruit ? (<b title="J'ai compris">Je comprendre</b>)
-                        <input type="text" pattern="J|j'ai compris">
+                        <input type="text" pattern="[Jj]'ai compris">
                         des mots...
                     </li>
 
@@ -287,7 +287,7 @@
 
                     <li>
                         (<b title="J'ai promis">Je promettre</b>)
-                        <input type="text" pattern="J|j'ai promis">
+                        <input type="text" pattern="[Jj]'ai promis">
                         de dire la vérité.
                     </li>
 
