fine-tuning concodrance for imperfect and present perfect

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -27,17 +27,17 @@
                         <h4>Un hiver au Québec</h4>
 
                         <p>
-                            Avant de venir étudier au Québec, je
-                            (<b title="je ne connaissais pas">ne connaître pas</b>)
+                            Avant de venir étudier au Québec,
+                            (<b title="je ne connaissais pas">je ne connaître pas</b>)
                             <input type="text" class="extra-wide" pattern="je ne connaissais pas">
                             l’hiver.
 
                             (<b title="J'étais">Je être</b>)
-                            <input type="text" pattern="J|j'étais">
+                            <input type="text" pattern="[Jj]'étais">
                             donc très content de faire cette nouvelle expérience.
 
                             (<b title="Je suis arrivé">Je arriver</b>)
-                            <input type="text" pattern="J|je suis arrivé">
+                            <input type="text" pattern="[Jj]e suis arrivé">
                             à Montréal au mois de décembre.
 
                             Il y (<b title="avait">avoir</b>)
@@ -64,8 +64,8 @@
                             <input type="text" pattern="a été">
                             d’une heure trente.
 
-                            Quand je (<b title="suis arrivé">arriver</b>)
-                            <input type="text" pattern="suis arrivé">
+                            Quand (<b title="je suis arrivé">je arriver</b>)
+                            <input type="text" pattern="je suis arrivé">
                             dans cet autre endroit, il (<b title="faisait">faire</b>)
                             <input type="text" pattern="faisait">
                             -22°C.
@@ -81,8 +81,8 @@
                             <input type="text" pattern="a commencé">
                             à tomber.
 
-                            (<b title="J|j'ai pris">Je prendre</b>)
-                            <input type="text" pattern="J|j'ai pris">
+                            (<b title="J'ai pris">Je prendre</b>)
+                            <input type="text" pattern="[Jj]'ai pris">
                             un taxi pour aller à l’université.
 
                             La voiture (<b title="glissait">glisser</b>)
@@ -129,7 +129,7 @@
                             magasiner au centre commercial.
 
                             (<b title="C'était">Ce être</b>)
-                            <input type="text" pattern="C|c'était">
+                            <input type="text" pattern="[Cc]'était">
                             un jour de congé pour la plupart des gens et il y (<b title="avait">avoir</b>)
                             <input type="text" pattern="avait">
                             beaucoup de monde dans les magasins.
@@ -212,8 +212,8 @@
                             <input type="text" pattern="étaient">
                             occupés, alors j’en (<b title="ai pris">prendre</b>)
                             <input type="text" pattern="ai pris">
-                            un à l’arrière et je (<b title="me suis assis">s’asseoir</b>)
-                            <input type="text" pattern="me suis assis">
+                            un à l’arrière et (<b title="je me suis assis">je s’asseoir</b>)
+                            <input type="text" class="wide" pattern="je me suis assis">
                             .
 
                             Après quelques minutes, une jolie fille (<b title="est venue">venir</b>)
@@ -224,7 +224,7 @@
                             .
 
                             (<b title="J'étais">Je être</b>)
-                            <input type="text" pattern="J|j'étais">
+                            <input type="text" pattern="[Jj]'étais">
                             trop timide pour faire cela.
 
                             Comme le film (<b title="était">être</b>)
@@ -249,11 +249,11 @@
                             à ce même cinéma.
 
                             (<b title="J'espérais">Je espérer</b>)
-                            <input type="text" pattern="J|j'espérais">
+                            <input type="text" pattern="[Jj]'espérais">
                             revoir cette fille.
 
                             (<b title="Je voulais">Je vouloir</b>)
-                            <input type="text" pattern="J|je voulais">
+                            <input type="text" pattern="[Jj]e voulais">
                             lui demander son nom et son numéro de téléphone,
                             mais je (<b title="ne l'ai pas aperçue">ne pas la apercevoir</b>)
                             <input type="text" class="wide" pattern="ne l'ai pas aperçue">
@@ -276,7 +276,7 @@
                             l’autobus.
 
                             (<b title="J'étais">Je être</b>)
-                            <input type="text" pattern="J|j'étais">
+                            <input type="text" pattern="[Jj]'étais">
                             seul et (<b title="j'avais">je avoir</b>)
                             <input type="text" pattern="j'avais">
                             froid.
@@ -324,7 +324,7 @@
                             une passe pour la journée.
 
                             (<b title="C'était">Ce être</b>)
-                            <input type="text" pattern="C|c'était">
+                            <input type="text" pattern="[Cc]'était">
                             une journée froide, mais très belle.
 
                             D’abord, (<b title="j'ai chaussé">je chausser</b>)
@@ -333,8 +333,8 @@
                             <input type="text" class="wide" pattern="je suis montée">
                             dans le monte-pente.
 
-                            Comme je (<b title="ne pas pratiquais">ne pas pratiquer</b>)
-                            <input type="text" class="wide" pattern="ne pas pratiquais">
+                            Comme je (<b title="ne pratiquais pas">ne pas pratiquer</b>)
+                            <input type="text" class="wide" pattern="ne pratiquais pas">
                             cette activité très souvent, (<b title="j'avais / j'ai eu">je avoir</b>)
                             <input type="text" pattern="j'avais|j'ai eu">
                             un peu peur.
