--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -164,9 +164,9 @@
                             Nous (<b title="commencions">commencer</b>)
                             <input type="text" class="wide" pattern="commencions">
                             réellement à penser que les souliers parfaits
-                            (<b title="n'existaient">ne exister</b>)
-                            <input type="text" pattern="n'existaient">
-                            pas !
+                            (<b title="n'existaient pas">ne exister pas</b>)
+                            <input type="text" class="wide" pattern="n'existaient pas">
+                            !
 
                             Mais nous (<b title="avons repris">reprendre</b>)
                             <input type="text" pattern="avons repris">
@@ -402,8 +402,8 @@
                             <input type="text" pattern="a reconduites">
                             chacune chez soi.
 
-                            (<b title="J|j'ai passé">Je passer</b>)
-                            <input type="text" pattern="J|j'ai passé">
+                            (<b title="J'ai passé">Je passer</b>)
+                            <input type="text" pattern="[Jj]'ai passé">
                             une très belle journée et j’espère qu’on y retournera bientôt.
                         </p>
                     </li>
