fine-tuning concordance text exercise

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -270,9 +270,14 @@ arrive.">car</span> l’heure de fermeture des magasins
                                 <input type="text" pattern="était">
                                 triste, (<b title="j'ai vu">je voir</b>)
                                 <input type="text" pattern="j'ai vu">
+                            </span>
+                            <span class="sentence-with-hint">
                                 qu’elle (<b title="a pleuré">pleurer</b>)
                                 <input type="text" pattern="a pleuré">
-                                sans arrêt tout le long du film.
+                                sans arrêt
+                                <span class="hint"
+                                    title="Le passé composé: Une action accomplie dans une durée ou une limite de temps précise.">tout
+                                    le long du film</span>.
                             </span>
 
                             <span class="sentence-with-hint">
