fine-tuning concordance exercise

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -70,7 +70,7 @@
                             pas attention.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Comme</span>
+                                <span class="hint" title="L’imparfait: une description.">Comme</span>
                                 (<b title="j'étudiais">je étudier</b>)
                                 <input type="text" pattern="j'étudiais">
                                 à Trois-Rivières, (<b title="j'ai pris">je prendre</b>)
@@ -210,7 +210,9 @@
                                 Mais nous (<b title="avons repris">reprendre</b>)
                                 <input type="text" pattern="avons repris">
                                 la course des magasins et,
-                                <span class="hint">tout à coup</span>,
+                                <span class="hint"
+                                    title="Le passé composé: Une action accomplie à un moment précis.">tout à
+                                    coup</span>,
                                 dans le dernier magasin de chaussures du centre
                                 commercial dans lequel nous
                                 (<b title="sommes entrées">entrer</b>)
@@ -280,7 +282,7 @@ arrive.">car</span> l’heure de fermeture des magasins
                             trop timide pour faire cela.
 
                             <span class="sentence-with-hint">
-                                <span class="hint">Comme</span> le film
+                                <span class="hint" title="L’imparfait: une description.">Comme</span> le film
                                 (<b title="était">être</b>)
                                 <input type="text" pattern="était">
                                 triste, (<b title="j'ai vu">je voir</b>)
@@ -344,7 +346,8 @@ arrive.">car</span> l’heure de fermeture des magasins
                             continuellement.
 
                             <span class="sentence-with-hint">
-                                <span class="hint">À la sortie du cinéma</span>,
+                                <span class="hint" title="Le passé composé: Une action accomplie à un moment précis.">À
+                                    la sortie du cinéma</span>,
                                 (<b title="j'ai attendu">je attendre</b>)
                                 <input type="text" pattern="j'ai attendu">
                                 l’autobus.
@@ -370,7 +373,9 @@ arrive.">car</span> l’heure de fermeture des magasins
                                 Nous (<b title="nous sommes regardés">se regarder</b>)
                                 <input type="text" class="extra-wide" pattern="nous sommes regardés">
                                 , mais,
-                                <span class="hint">encore cette fois</span>,
+                                <span class="hint"
+                                    title="L’imparfait: une action répétée vue de son déroulement / Le passé composé: Un état d’esprit momentané.">encore
+                                    cette fois</span>,
                                 (<b title="j'ai été / j'étais">je être</b>)
                                 <input type="text" pattern="j'ai été|j'étais">
                                 trop timide et je (<b title="n'ai pas osé">ne pas oser</b>)
@@ -430,7 +435,8 @@ arrive.">car</span> l’heure de fermeture des magasins
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint">Comme</span> je (<b title="ne pratiquais pas">ne pas pratiquer</b>)
+                                <span class="hint" title="L’imparfait: une description.">Comme</span>
+                                je (<b title="ne pratiquais pas">ne pas pratiquer</b>)
                                 <input type="text" class="wide" pattern="ne pratiquais pas">
                                 cette activité très souvent, (<b title="j'avais / j'ai eu">je avoir</b>)
                                 <input type="text" pattern="j'avais|j'ai eu">
