moved conjugation html into pages folder

--- a/french/index.html
+++ b/french/index.html
@@ -20,40 +20,40 @@
 <body>
   <h2>La conjugaison des temps de verbes</h2>
   <h3>
-    <a href="conjugations.html?Le%20pr%C3%A9sent">Le présent</a>,
+    <a href="pages/conjugations.html?Le%20pr%C3%A9sent">Le présent</a>,
     <a href="pages/exercise_present.html">Exercise</a>
   </h3>
 
   <h3>
-    <a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>,
+    <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>,
     <a href="pages/exercise_presentperfect.html">Exercise</a>
   </h3>
 
   <h3>
-    <a href="conjugations.html?L'imparfait">L'imparfait</a>,
+    <a href="pages/conjugations.html?L'imparfait">L'imparfait</a>,
     <a href="pages/exercise_imperfect.html">Exercise</a>,
     <a href="pages/exercise_concordance.html">Exercise de concordance</a>
   </h3>
 
   <h3>
-    <a href="conjugations.html?Le%20futur%20simple">Le futur simple</a>,
+    <a href="pages/conjugations.html?Le%20futur%20simple">Le futur simple</a>,
     <a href="pages/exercise_future.html">Exercise</a>
   </h3>
 
   <h3>
-    <a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">Le conditionnel présent</a>,
+    <a href="pages/conjugations.html?Le%20conditionnel%20pr%C3%A9sent">Le conditionnel présent</a>,
 
     <a href="pages/exercise_conditionalpresent.html">Exercise</a>
   </h3>
 
   <h3>
-    <a href="conjugations.html?Le conditionnel passé">Le conditionnel passé</a>,
+    <a href="pages/conjugations.html?Le conditionnel passé">Le conditionnel passé</a>,
     <a href="pages/exercise_conditionalperfect.html">Exercise</a>
   </h3>
 
   <br />
   <h3>
-    <a href="conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
+    <a href="pages/conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
   </h3>
 
 </body>
