--- a/french/pages/conjugations.html
+++ b/french/pages/conjugations.html
@@ -7,13 +7,13 @@
     <title>Conjugaison</title>
 
     <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <script type="module">
         "use strict";
 
-        import { Resolver } from './js/Resolver.mjs';
-        import { PageBuilder } from './js/PageBuilder.mjs';
+        import { Resolver } from '../js/Resolver.mjs';
+        import { PageBuilder } from '../js/PageBuilder.mjs';
 
         const title = window.decodeURIComponent(window.location.search).substring(1);
 
