--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -7,12 +7,12 @@
     <title>Présent Simple</title>
 
     <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <script type="module">
         "use strict";
 
-        import { PageBuilderForManyTenses } from './js/PageBuilderForManyTenses.mjs';
+        import { PageBuilderForManyTenses } from '../js/PageBuilderForManyTenses.mjs';
 
         const verbListObject = PageBuilderForManyTenses.getVerbList();
 
