--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -6,7 +6,7 @@
 
     <title>Présent Simple</title>
 
-    <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
+    <link rel="icon" type="image/x-icon" href="../images/eiffel-tower.ico">
     <link rel="stylesheet" href="../styles.css">
 
     <script type="module">
