added hints for verb choices

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -76,9 +76,16 @@
                                 <span class="hint" title="L’imparfait: une description.">Comme</span>
                                 (<b title="j'étudiais">je étudier</b>)
                                 <input type="text" pattern="j'étudiais">
-                                à Trois-Rivières, (<b title="j'ai pris">je prendre</b>)
+                                à Trois-Rivières,
+                            </span>
+                            <span class="sentence-with-hint">
+                                (<b title="j'ai pris">je prendre</b>)
                                 <input type="text" pattern="j'ai pris">
-                                l’autobus pour me rendre à cette ville.
+                                l’autobus
+                                <span class="hint"
+                                    title="Le passé composé: Cette action est finie et elle ne s’est produite qu’une seule fois.">
+                                    pour me rendre à cette ville.
+                                </span>
                             </span>
 
                             <span class="sentence-with-hint">
@@ -97,11 +104,16 @@
                                 -22°C.
                             </span>
 
-                            Le vent (<b title="soufflait">souffler</b>)
-                            <input type="text" pattern="soufflait">
-                            très fort et on (<b title="annonçait">annoncer</b>)
-                            <input type="text" pattern="annonçait">
-                            une tempête de neige de 30 cm pour les prochaines heures.
+                            <span class="sentence-with-hint">
+                                Le vent (<b title="soufflait">souffler</b>)
+                                <input type="text" pattern="soufflait">
+                                très fort et on (<b title="annonçait">annoncer</b>)
+                                <input type="text" pattern="annonçait">
+                                <span class="hint" title="L’imparfait: action répétée un nombre indéterminée de fois">
+                                    une tempête de neige de 30 cm pour les prochaines heures
+                                </span>
+                                .
+                            </span>
 
                             <span class="sentence-with-hint">
                                 <span class="hint"
@@ -139,9 +151,14 @@
                                 à aimer ce climat nordique qui oxygène le corps et l’esprit.
                             </span>
 
-                            Vraiment, (<b title="j'ai aimé">je aimer</b>)
-                            <input type="text" pattern="j'ai aimé">
-                            voir la neige qui (<b title="tombait">tomber</b>)
+                            <span class="sentence-with-hint">
+                                Vraiment, (<b title="j'ai aimé">je aimer</b>)
+                                <input type="text" pattern="j'ai aimé">
+                                <span class="hint" title="Le passé composé: l’action est finie.">
+                                    voir la neige
+                                </span>
+                            </span>
+                            qui (<b title="tombait">tomber</b>)
                             <input type="text" pattern="tombait">
                             et qui (<b title="ressemblait">ressembler</b>)
                             <input type="text" pattern="ressemblait">
