--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -22,6 +22,7 @@
         document.querySelectorAll('.tense-checkbox').forEach((checkboxElement) => {
             checkboxElement.onclick = () => {
                 PageBuilderForManyTenses.buildForManyTenses(verbListObject, title);
+                ErrorCounter.initialize();
             }
         });
 
