--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -104,10 +104,12 @@
                                 -22°C.
                             </span>
 
+
+                            Le vent (<b title="soufflait">souffler</b>)
+                            <input type="text" pattern="soufflait">
+                            très fort et
                             <span class="sentence-with-hint">
-                                Le vent (<b title="soufflait">souffler</b>)
-                                <input type="text" pattern="soufflait">
-                                très fort et on (<b title="annonçait">annoncer</b>)
+                                on (<b title="annonçait">annoncer</b>)
                                 <input type="text" pattern="annonçait">
                                 <span class="hint" title="L’imparfait: action répétée un nombre indéterminée de fois">
                                     une tempête de neige de 30 cm pour les prochaines heures
@@ -239,10 +241,11 @@
                                 <input type="text" class="wide" pattern="sommes entrées">
                                 , Lucie (<b title="a trouvé">trouver</b>)
                                 <input type="text" pattern="a trouvé">
-                                les petits souliers qui lui (<b title="plaisaient">plaire</b>)
-                                <input type="text" pattern="plaisaient">
-                                .
                             </span>
+                            les petits souliers qui lui (<b title="plaisaient">plaire</b>)
+                            <input type="text" pattern="plaisaient">
+                            .
+
 
                             <span class="sentence-with-hint">
                                 Elle les (<b title="a achetés">acheter</b>)
