fine-tuned hints for concordance exercise

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -221,9 +221,15 @@
                                 un repas à un petit café avant de recommencer le magasinage.
                             </span>
 
-                            Nous (<b title="commencions">commencer</b>)
-                            <input type="text" class="wide" pattern="commencions">
-                            réellement à penser que les souliers parfaits
+                            <span class="sentence-with-hint">
+                                Nous (<b title="commencions">commencer</b>)
+                                <input type="text" class="wide" pattern="commencions">
+                                <span class="hint"
+                                    title="L’imparfait: C’est un sentiment qui se prolonge dans le temps.">
+                                    réellement à penser
+                                </span>
+                            </span>
+                            que les souliers parfaits
                             (<b title="n'existaient pas">ne exister pas</b>)
                             <input type="text" class="wide" pattern="n'existaient pas">
                             !
@@ -242,8 +248,12 @@
                                 , Lucie (<b title="a trouvé">trouver</b>)
                                 <input type="text" pattern="a trouvé">
                             </span>
-                            les petits souliers qui lui (<b title="plaisaient">plaire</b>)
-                            <input type="text" pattern="plaisaient">
+                            <span class="sentence-with-hint">
+                                <span class="hint" title="L’imparfait: c'est un sentiment.">les petits souliers qui
+                                    lui</span>
+                                (<b title="plaisaient">plaire</b>)
+                                <input type="text" pattern="plaisaient">
+                            </span>
                             .
 
 
@@ -345,9 +355,14 @@ arrive.">car</span> l’heure de fermeture des magasins
                             <input type="text" pattern="[Jj]'espérais">
                             revoir cette fille.
 
-                            (<b title="Je voulais">Je vouloir</b>)
-                            <input type="text" pattern="[Jj]e voulais">
-                            lui demander son nom et son numéro de téléphone,
+                            <span class="sentence-with-hint">
+                                (<b title="Je voulais">Je vouloir</b>)
+                                <input type="text" pattern="[Jj]e voulais">
+                                <span class="hint"
+                                    title="L’imparfait: C’est un sentiment qui se prolonge dans le temps.">
+                                    lui demander son nom et son numéro de téléphone
+                                </span>,
+                            </span>
                             mais je (<b title="ne l'ai pas aperçue">ne pas la apercevoir</b>)
                             <input type="text" class="wide" pattern="ne l'ai pas aperçue">
                             .
