added page for Stats

--- a/french/index.html
+++ b/french/index.html
@@ -51,11 +51,14 @@
     <a href="pages/exercise_conditionalperfect.html">Exercise</a>
   </h3>
 
-  <br />
   <h3>
     <a href="pages/conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
   </h3>
 
+  <br />
+  <h3>
+    <a href="pages/stats.html">Statistiques</a>
+  </h3>
 </body>
 
 </html>
