added links to stats table

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -36,27 +36,27 @@
                     </tr>
                     <tr>
                         <!-- présent -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
+                        <th><a href="exercise_present.html">texte</a></th>
 
                         <!-- passé composé -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">liste</a></th>
+                        <th><a href="exercise_presentperfect.html">texte</a></th>
 
                         <!-- imparfait -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?L'imparfait">liste</a></th>
+                        <th><a href="exercise_imperfect.html">texte</a></th>
 
                         <!-- futur simple -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?Le%20futur%20simple">liste</a></th>
+                        <th><a href="exercise_future.html">texte</a></th>
 
                         <!-- conditionnel présent -->
-                        <th>liste</th>
-                        <th>texte</th>
+                        <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
+                        <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
                         <!-- concordance -->
-                        <th>imp.- passé c.</th>
+                        <th><a href="conjugations_mixed.html?Conjugaisons mélangées">imp.- passé c.</a></th>
                     </tr>
                 </thead>
                 <tbody>
