--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -56,7 +56,7 @@
                         <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
                         <!-- concordance -->
-                        <th><a href="conjugations_mixed.html?Conjugaisons mélangées">imp.- passé c.</a></th>
+                        <th><a href="exercise_concordance.html">imp.- passé c.</a></th>
                     </tr>
                 </thead>
                 <tbody>
